--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -135,7 +135,7 @@ import "../styles/global.css";
       <div class="product-card">
         <div class="product-logo-wrap">
           <div class="product-logo-wrap">
-            <img src="/logos/Epist.png" alt="Aion" class="product-logo" />
+            <img src="/logos/Epist.png" alt="Epist" class="product-logo" />
           </div>
         </div>
         <div class="product-info">
