--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import "../styles/global.css";
       </a>
       <div class="nav-links">
         <a href="#products">Products</a>
+        <a href="/introduction/">Docs</a>
         <a href="https://github.com/semos-labs" target="_blank" rel="noopener" class="nav-github">
           GitHub ↗
         </a>
