Add gh stars counters

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ const { title, description = "A family of terminal apps and tools" } = Astro.pro
       <div class="max-w-content mx-auto flex items-center justify-between">
         <a href="/" class="flex items-center gap-3">
           <img src="/logos/Sema.png" alt="Semos Labs" class="w-8 h-8 rounded-md" />
-          <span>
+          <span class="flex flex-col gap-0">
             <span class="font-hand text-2xl tracking-[0.01em]">semos</span>
             <span class="block font-hand text-[0.5rem] tracking-[0.01em] text-gray-400">A constellation of terminal-native tools.</span>
           </span>
