Remove kit script

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -147,7 +147,7 @@ import Layout from "../layouts/Layout.astro";
         Get occasional updates on new releases, features, and tools we're building. No spam, unsubscribe anytime.
       </p>
       <div id="subscribe-form">
-        <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
+      <ul class="formkit-alert formkit-alert-error" data-element="errors" data-group="alert"></ul>
         <form
           action="https://app.kit.com/forms/9086412/subscriptions"
           method="post"
